--- a/css/style.css
+++ b/css/style.css
@@ -10,3 +10,93 @@ html, body {
     text-align: center; 
   }
 
+h1 {
+	font-family: 'Krona One', sans-serif;
+	font-size: 40px;
+}
+
+h2, label {
+	font-family: 'Open Sans', sans-serif;
+	font-size: 20px;
+	font-weight: 600;
+}
+
+th {
+	font-family: 'Open Sans', sans-serif;
+	font-size: 14px;
+	font-weight: 400;
+	text-align: left;
+	padding: 10px;
+}
+
+p {
+	font-family: 'Open Sans', sans-serif;
+	font-size: 14px;
+	font-weight: 400;
+	text-align: center;
+}
+
+input {
+	border-radius: 30px;
+	width: 60%;
+	padding: 5px;
+	border: 1px solid #c3c4c8;
+	font-family: 'Open Sans', sans-serif;
+	font-size: 14px;
+	font-weight: 400;
+	text-align: left;
+}
+
+button {
+	background-color: #152173;
+	color: #ffffff;
+	border-radius: 30px;
+	padding: 10px 15px;
+	width: 50%;
+	text-align: center;
+	border: none;
+	font-family: 'Open Sans', sans-serif;
+	font-size: 14px;
+	font-weight: 400;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+button:hover {
+    background-color: #cd233f;
+}
+
+.row {
+    display: flex;
+}
+
+.column {
+    flex: 50%;
+    border: 1px solid #c3c4c8; 
+    margin: 10px;
+    padding: 20px;
+}
+
+.table-header {
+	background-color: #152173;
+	color: #ffffff;
+}
+
+form {
+	font-family: 'Open Sans', sans-serif;
+	font-size: 14px;
+	font-weight: 400;
+	text-align: center;
+
+}
+
+table {
+	table-layout: fixed;
+    width: 100%;
+    border: 1px solid #c3c4c8;
+
+}
+
+.reviews {
+	padding: 5%;
+}
